# exp-box

./: .dockerignore  .env.example  .gitignore  DOCKER.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: app.rs  db.rs  main.rs  proxy.rs  rooms.rs  state.rs
backend/src/api/: auth.rs  error.rs  health.rs  mod.rs  proxy.rs  rce.rs  rooms.rs
frontend/: Dockerfile  README.md  nginx.conf
frontend/src/: App.css  App.tsx  Login.tsx  Navbar.tsx  Register.tsx  RoomRce.tsx  RoomXss.tsx  Rooms.tsx  api.ts  index.css
migrations/: 0001_init.sql  0002_progress_user_id.sql
rooms/rce/: Cargo.toml
rooms/rce/src/: main.rs
services/auth/: Cargo.toml  Dockerfile
services/auth/migrations/: 0001_init.sql
services/auth/src/: app.rs  db.rs  error.rs  main.rs
services/auth/src/api/: auth.rs  health.rs  mod.rs
services/gateway/: Cargo.toml  Dockerfile  build.rs
services/gateway/migrations/: 0001_init.sql  0003_xss_room.sql
services/gateway/src/: auth.rs  db.rs  main.rs  room_registry.rs  state.rs
services/gateway/src/api/: error.rs  mod.rs  rce.rs  xss.rs
services/rooms/rce/: Dockerfile
services/rooms/rce/src/: main.rs
services/rooms/xss/: Cargo.toml  Dockerfile
services/rooms/xss/migrations/: 0001_init.sql  0002_room_accounts.sql
services/rooms/xss/src/: app.rs  db.rs  error.rs  main.rs  state.rs
services/rooms/xss/src/api/: account.rs  comments.rs  health.rs  mod.rs  post.rs
