[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12.6", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
