[package]
name = "gateway-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.13.4", features = ["json"] }
sha2 = "0.11.0"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
anyhow = "1.0.102"
